[tool.poetry]
name = "minebench"
version = "0.1.0"
description = "A collection of utilities designed for benchmarking Minecraft: Java Edition clients and servers."
authors = ["Matt LeGro <esmbaseball@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.11"
pexpect = "^4.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
